--- a/doctrine/fa.html
+++ b/doctrine/fa.html
@@ -6,7 +6,7 @@ permalink: /doctrine/fa
 
     <section lang="fa">
       <h1 style="margin-bottom: 0px">دکترین ریلز</h1>
-      <p style="margin-top: 0"><small style="color: grey">Por David Heinemeier Hansson en Enero de 2016</small></p>
+      <p style="margin-top: 0"><small style="color: grey">نوشته دیوید هنسون هاینمایر در ژانویه ۲۰۱۶</small></p>
 
       <figure class="right">
         <img src="/images/doctrine.png" alt="La Doctrina Rails">
