updated translation. added fa.odt

--- a/doctrine/fa.html
+++ b/doctrine/fa.html
@@ -12,7 +12,7 @@ permalink: /doctrine/fa
         <img src="/images/doctrine.png" alt="La Doctrina Rails">
       </figure>
 
-      <p>ترقی شگفت انگیز Ruby on Rails به سمت برتری‌‌‌‌‌‌٬</p>
+      <p>ترقی شگفت انگیز Ruby on Rails به سمت برتری٬ بیشترین [lift-off] خود را مدیون تکنولوژی جدید و زمانبندی می داند.</p>
 
       <p>Esta doctrina ha evolucionado durante la última década, pero la mayoría de sus pilares más fuertes también son sus fundadores. No pretendo reivindicar la originalidad fundamental de estas ideas. El principal logro de Rails fue unir y cultivar una tribu fuerte en torno a un amplio conjunto de pensamientos heréticos sobre la naturaleza de la programación y los programadores.</p>
 
